K8s/ingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - path: /example
        backend:
          service
            name: example
            port:
              number: 80
